# TinyNetLab

./: LICENSE  README.md  app.py  attention_demo.py  i18n.py  moons.py  moons_app.py  moons_gui.py  moons_streamlit.py  pyproject.toml  tinynet.py
docs/: README.zh.md  attention_example.md  attention_example.zh.md
tests/: test_activations.py  test_boundary_grid.py  test_forward_backward.py  test_loss.py  test_positional_encoding.py  test_translations.py  test_ui_rendering.py  test_update_params.py
